# rotateDistributed

./: README.md
rotateDistributed/: cabal.project
rotateDistributed/rotate/: rotate.cabal
rotateDistributed/rotateBackpack/: rotateBackpack.cabal
rotateDistributed/rotateUse/: rotateUse.cabal
