name:          rotate
category:      Language
version:       0
license:       BSD2
cabal-version: 2.0
author:        Fog
maintainer:    Fog
stability:     experimental
build-type:    Simple
synopsis:      eg of how to distribute a backpack over multiple packages, here is the signature and a module which uses it
description:   the signature can be implemented by backpack modules provided in a *different* package

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  signatures: Rotate
  exposed-modules: TestRotate
  build-depends: base
