name:          rotateBackpack
category:      Language
version:       0
license:       BSD2
cabal-version: 2.0
author:        Fog
maintainer:    Fog
stability:     experimental
build-type:    Simple
synopsis:      the implementations of the signature Rotate.hsig - which cant be placed in the same package as this signature
description:   Backpack has the limitation that implementation modules that instantiate signatures required by a build-depends dependency can’t reside in the same component that has the dependency. They must reside in a different package dependency, or at least in a separate internal library.

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: internal
  exposed-modules: LinearRotate,VectRotate
  build-depends: base,linear,vect


