name:          rotateUse
category:      Language
version:       0
license:       BSD2
cabal-version: 2.0
author:        Fog
maintainer:    Fog
stability:     experimental
build-type:    Simple
synopsis:      eg of how to use backpack
description:   provides two backends providing vector rotation using quaternions 

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: example
  build-depends: base,rotate

executable rotate-example
  default-language: Haskell2010
  main-is: example/Main.hs
  build-depends: base, rotate, rotateBackpack
  mixins: rotate (TestRotate as Linear.TestRotate) requires (Rotate as LinearRotate)
  mixins: rotate (TestRotate as Vect.TestRotate  ) requires (Rotate as VectRotate  )

 	